--- a/Components/Bootstrap/Modals/ModalDialog.razor
+++ b/Components/Bootstrap/Modals/ModalDialog.razor
@@ -21,9 +21,9 @@
 							<span>@GetTranslation("OkCommand")</span>
 						</button>
 					}
-					<button class="btn btn-danger" type="button" data-bs-dismiss="modal">
+					<button class="@CloseButtonClass" type="button" data-bs-dismiss="modal">
 						@BuildFontAwesomeElement("fa-xmark")
-						<span>@GetTranslation("CancelCommand")</span>
+						<span>@CloseButtonText</span>
 					</button>
 				</div>
 			</div>
@@ -43,7 +43,8 @@
 	[Parameter] public EventCallback<string> OnOkCommand { get; set; }
 	[Parameter] public string OkCommandParameter { get; set; } = string.Empty;
 
-	protected string CloseButtonClass => IsFontAwesomeAvailable ? "btn btn-danger" : "btn-close";
+	protected string CloseButtonClass => HasOkCommand ? "btn btn-danger" : "btn btn-secondary";
+	protected string CloseButtonText => HasOkCommand ? GetTranslation("CancelCommand") : GetTranslation("CloseCommand");
 
 	protected string BuildModalClassNames()
 	{
