Update to 9.0.2 - added "Card"

--- a/Components/UwnRoot.razor
+++ b/Components/UwnRoot.razor
@@ -5,9 +5,11 @@
 @inject UwnCapabilitiesService CapabilitiesService
 @inherits LayoutComponentBase
 
-<CascadingValue Value="Capabilities">
-	<CascadingValue Value="Settings">
-		@ChildContent
+<CascadingValue Value="this">
+	<CascadingValue Value="Capabilities">
+		<CascadingValue Value="Settings">
+			@ChildContent
+		</CascadingValue>
 	</CascadingValue>
 </CascadingValue>
 
