--- a/Components/Bootstrap/Modals/ModalDialog.razor
+++ b/Components/Bootstrap/Modals/ModalDialog.razor
@@ -40,7 +40,7 @@
 	[Parameter] public ModalSize Size { get; set; } = ModalSize.Default;
 	[Parameter] public string? Title { get; set; }
 	[Parameter] public bool HasOkCommand { get; set; } = true;
-	[Parameter] public EventCallback<string> OnOkCommand { get; set; }
+	[Parameter] public EventCallback<string>? OnOkCommand { get; set; }
 	[Parameter] public string OkCommandParameter { get; set; } = string.Empty;
 
 	protected string CloseButtonClass => HasOkCommand ? "btn btn-danger" : "btn btn-secondary";
