--- a/Uwn.Razor.Demo/Components/Components/Bootstrap/Navs/PaginationPage.razor
+++ b/Uwn.Razor.Demo/Components/Components/Bootstrap/Navs/PaginationPage.razor
@@ -23,7 +23,9 @@
 
 <ComponentDescriptionContainer Description="A pagination nav bar"
 							   Namespace="Uwn.Razor.Components.Bootstrap.Navs"
-							   Inherits="UwnComponentBase" />
+							   InheritsType="@typeof(UwnComponentBase<PaginationViewModel>)"
+							   InheritsRoute="@RouteStrings.ComponentsCommonUwnComponentBase"
+							   ViewModelRoute="@RouteStrings.ModelsViewModelsBootstrapPaginationViewModel" />
 
 <Table Purpose="TablePurpose.Editor">
 	<TableHead>
