--- a/Uwn.Razor.Demo/Components/Components/Common/UwnComponentBasePage.razor
+++ b/Uwn.Razor.Demo/Components/Components/Common/UwnComponentBasePage.razor
@@ -2,7 +2,8 @@
 @namespace Uwn.Razor.Demo.Components.Components.Common
 
 <ComponentDescriptionContainer Description="This is the abstract base class for all other Components"
-							   Namespace="Uwn.Razor.Components.Common" />
+							   Namespace="Uwn.Razor.Components.Common"
+							   IsBaseComponent="true" />
 
 <Table Purpose="TablePurpose.Editor">
 	<TableHead>
